# olx-monitor

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  miner_id.py  olx_gui.py  olx_scraper.py  otodom_scraper.py  pyproject.toml  requirements.txt  test_olx_scraper.py  update_districts.py
.github/workflows/: check-districts.yml  dev-to-main-pr.yml  release.yml  tests.yml
countries/: pl.json  ua.json
docker/: .env.example  Dockerfile
scripts/: build_release.sh
